--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,158 +1,48 @@
-\documentclass{article}
-\usepackage{arxiv}
-
-\usepackage[utf8]{inputenc}
-\usepackage[english, russian]{babel}
-\usepackage[T1]{fontenc}
-\usepackage{url}
-\usepackage{booktabs}
-\usepackage{amsfonts}
-\usepackage{nicefrac}
-\usepackage{microtype}
-\usepackage{lipsum}
-\usepackage{graphicx}
-\usepackage{natbib}
-\usepackage{doi}
-
-
-
-\title{A template for the \emph{arxiv} style}
-
-\author{ David S.~Hippocampus\thanks{Use footnote for providing further
-		information about author (webpage, alternative
-		address)---\emph{not} for acknowledging funding agencies.} \\
-	Department of Computer Science\\
-	Cranberry-Lemon University\\
-	Pittsburgh, PA 15213 \\
-	\texttt{hippo@cs.cranberry-lemon.edu} \\
-	%% examples of more authors
-	\And
-	Elias D.~Striatum \\
-	Department of Electrical Engineering\\
-	Mount-Sheikh University\\
-	Santa Narimana, Levand \\
-	\texttt{stariate@ee.mount-sheikh.edu} \\
-	%% \AND
-	%% Coauthor \\
-	%% Affiliation \\
-	%% Address \\
-	%% \texttt{email} \\
-	%% \And
-	%% Coauthor \\
-	%% Affiliation \\
-	%% Address \\
-	%% \texttt{email} \\
-	%% \And
-	%% Coauthor \\
-	%% Affiliation \\
-	%% Address \\
-	%% \texttt{email} \\
-}
-\date{}
-
-\renewcommand{\shorttitle}{\textit{arXiv} Template}
-
-%%% Add PDF metadata to help others organize their library
-%%% Once the PDF is generated, you can check the metadata with
-%%% $ pdfinfo template.pdf
-\hypersetup{
-pdftitle={A template for the arxiv style},
-pdfsubject={q-bio.NC, q-bio.QM},
-pdfauthor={David S.~Hippocampus, Elias D.~Striatum},
-pdfkeywords={First keyword, Second keyword, More},
-}
+\documentclass[12pt, twoside]{article} 
+\newcommand{\hdir}{.}
+\usepackage{./jmlda/jmlda}
 
 \begin{document}
+\title
+	[поиск и восстановление зависимостей во временных рядах]
+	{поиск и восстановление зависимостей во временных рядах}
+\author
+	[I. M. Latypov]
+	{I. M. Latypov}
+\email
+	{latypov.im@phystech.edu}
+\organization	
+	{MIPT}	
+\abstract
+	{
+		При прогнозировании временных рядов, зависящих от других процессов, требуется решить задачу выявления связанных пар рядов.
+		Предполагается, что добавление этих рядов в модель может поспособствовать повышению качества прогноза. В данной работе для
+		обнаружения связей между рядами предлагается использовать метод .... Для восстановления зависимости между рядами предлагается
+		использовать метод Neural CDE
+		}
+\bigskip
+\noindent
+
 \maketitle
+\textbf{Ключевые слова}: \emph{раз ; два; три }
 
-\begin{abstract}
-	\lipsum[1]
-\end{abstract}
+\section{Введение}
+	Работа посвящена задаче поиска причинно-следственных связей между временными рядами и методам восстановления этих зависимостей.
+	Эта задача актуальна, поскольку часто на практике возникает несколько процессов, и учет зависимостей меджу этими ними может улучшить качество предсказаний. 
+		
+	Существует множество методов для обнаружения связей между рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
+	(convergent cross mapping, CCM) и другие, но у них есть существенные недостатки: тест Гренжера не дает
+	представления о виде зависимости рядов, а CCM требуется применять сразу ко всему доступному диапазону данных. К тому же алгоритм
+	выполняется за $O(n^2)$($n$ - длина ряда) для многомерного случая. Предложенный нами метод "крутое название метода" призван устранить эти недостатки.
+	
+	Для восстановления зависимости между рядами часто используют Recurrental Neural Networks (RNN), но такие модели дискретизируют время
+	что может повлиять на результат предсказания. Мы же предлагаем использовать Neural СDE, которые делают попытку учесть непрерывность
+	по времени. К тому же мы получаем механизм для обучения на рядах, информация от которых приходит с разными промежутками времени, подробнее об этом дальше
+    
 
-
-\keywords{First keyword \and Second keyword \and More}
-
-\section{Introduction}
-\lipsum[2]
-\lipsum[3]
-
-\section{Headings: first level}
-\label{sec:headings}
-
-\lipsum[4] See Section \ref{sec:headings}.
-
-\subsection{Headings: second level}
-\lipsum[5]
-\begin{equation}
-	\xi _{ij}(t)=P(x_{t}=i,x_{t+1}=j|y,v,w;\theta)= {\frac {\alpha _{i}(t)a^{w_t}_{ij}\beta _{j}(t+1)b^{v_{t+1}}_{j}(y_{t+1})}{\sum _{i=1}^{N} \sum _{j=1}^{N} \alpha _{i}(t)a^{w_t}_{ij}\beta _{j}(t+1)b^{v_{t+1}}_{j}(y_{t+1})}}
-\end{equation}
-
-\subsubsection{Headings: third level}
-\lipsum[6]
-
-\paragraph{Paragraph}
-\lipsum[7]
-
-
-
-\section{Examples of citations, figures, tables, references}
-\label{sec:others}
-
-\subsection{Citations}
-Citations use \verb+natbib+. The documentation may be found at
-\begin{center}
-	\url{http://mirrors.ctan.org/macros/latex/contrib/natbib/natnotes.pdf}
-\end{center}
-
-Here is an example usage of the two main commands (\verb+citet+ and \verb+citep+): Some people thought a thing \citep{kour2014real, hadash2018estimate} but other people thought something else \citep{kour2014fast}. Many people have speculated that if we knew exactly why \citet{kour2014fast} thought this\dots
-
-\subsection{Figures}
-\lipsum[10]
-See Figure \ref{fig:fig1}. Here is how you add footnotes. \footnote{Sample of the first footnote.}
-\lipsum[11]
-
-\begin{figure}
-	\centering
-	\includegraphics[width=0.5\textwidth]{../figures/log_reg_cs_exp.eps}
-	\caption{Sample figure caption.}
-	\label{fig:fig1}
-\end{figure}
-
-\subsection{Tables}
-See awesome Table~\ref{tab:table}.
-
-The documentation for \verb+booktabs+ (`Publication quality tables in LaTeX') is available from:
-\begin{center}
-	\url{https://www.ctan.org/pkg/booktabs}
-\end{center}
-
-
-\begin{table}
-	\caption{Sample table title}
-	\centering
-	\begin{tabular}{lll}
-		\toprule
-		\multicolumn{2}{c}{Part}                   \\
-		\cmidrule(r){1-2}
-		Name     & Description     & Size ($\mu$m) \\
-		\midrule
-		Dendrite & Input terminal  & $\sim$100     \\
-		Axon     & Output terminal & $\sim$10      \\
-		Soma     & Cell body       & up to $10^6$  \\
-		\bottomrule
-	\end{tabular}
-	\label{tab:table}
-\end{table}
-
-\subsection{Lists}
-\begin{itemize}
-	\item Lorem ipsum dolor sit amet
-	\item consectetur adipiscing elit.
-	\item Aliquam dignissim blandit est, in dictum tortor gravida eget. In ac rutrum magna.
-\end{itemize}
-
-
-\bibliographystyle{unsrtnat}
-\bibliography{references}
-
+\section{Теоритическое обоснование}
+	
+	
+	
+	
 \end{document}
