--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt, twoside]{article} 
 \newcommand{\hdir}{.}
-\usepackage{./jmlda/jmlda}
-
+\usepackage{./jmlda}
+\usepackage[round]{natbib}
 \begin{document}
 \title
 	[поиск и восстановление зависимостей во временных рядах]
@@ -15,34 +15,40 @@
 	{MIPT}	
 \abstract
 	{
-		При прогнозировании временных рядов, зависящих от других процессов, требуется решить задачу выявления связанных пар рядов.
-		Предполагается, что добавление этих рядов в модель может поспособствовать повышению качества прогноза. В данной работе для
-		обнаружения связей между рядами предлагается использовать метод .... Для восстановления зависимости между рядами предлагается
-		использовать метод Neural CDE
+		При прогнозировании временных рядов, зависящих от других временных рядов, требуется решить задачу выявления связей между ними.
+		Предполагается, что добавление связанных временных рядов в прогностическую модель повысит качество прогноза. В данной работе для
+		обнаружения зависимостей между временными рядами предлагается использовать метод .... Для предсказания зависимости между временными 
+		рядами предлагается использовать метод Neural CDE
 		}
 \bigskip
 \noindent
 
 \maketitle
-\textbf{Ключевые слова}: \emph{раз ; два; три }
+\textbf{Ключевые слова}: \emph{Neural CDE, CCM, временные ряды}
 
 \section{Введение}
-	Работа посвящена задаче поиска причинно-следственных связей между временными рядами и методам восстановления этих зависимостей.
-	Эта задача актуальна, поскольку часто на практике возникает несколько процессов, и учет зависимостей меджу этими ними может улучшить качество предсказаний. 
+	Работа посвящена задаче поиска причинно-следственных связей между временными рядами и методам предсказания их эволюции.
+	Эта задача актуальна, поскольку часто на практике приходится работать с многомерными временными рядами \citep{dataset_mlru}, и учет зависимостей между координатами может улучшить качество предсказаний. 
 		
 	Существует множество методов для обнаружения связей между рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
 	(convergent cross mapping, CCM) и другие, но у них есть существенные недостатки: тест Гренжера не дает
-	представления о виде зависимости рядов, а CCM требуется применять сразу ко всему доступному диапазону данных. К тому же алгоритм
+	представления о виде зависимости рядов, а CCM требуется применять сразу ко всему доступному набору данных. К тому же алгоритм
 	выполняется за $O(n^2)$($n$ - длина ряда) для многомерного случая. Предложенный нами метод "крутое название метода" призван устранить эти недостатки.
 	
-	Для восстановления зависимости между рядами часто используют Recurrental Neural Networks (RNN), но такие модели дискретизируют время
-	что может повлиять на результат предсказания. Мы же предлагаем использовать Neural СDE, которые делают попытку учесть непрерывность
-	по времени. К тому же мы получаем механизм для обучения на рядах, информация от которых приходит с разными промежутками времени, подробнее об этом дальше
-    
+	Для предсказания временных рядов часто используют Recurrental Neural Networks (RNN), но такие модели дискретизируют время
+	что может повлиять на результат предсказания. Мы же предлагаем использовать Neural СDE, которые учитывают непрерывность
+	по времени. К тому же мы получаем механизм для обучения на рядах, информация от которых приходит с разными промежутками времени.
+	
+	
+	Работа посвящена обнаружению причинно-следственных связей между разнородными временными рядами
+
 
 \section{Теоритическое обоснование}
 	
-	
+\section{Заключение}
+
+\bibliographystyle{plain}
+\bibliography{references}
 	
 	
 \end{document}
