--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,25 +1,19 @@
-@inproceedings{kour2014real,
-  title={Real-time segmentation of on-line handwritten arabic script},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Frontiers in Handwriting Recognition (ICFHR), 2014 14th International Conference on},
-  pages={417--422},
-  year={2014},
-  organization={IEEE}
+@Article{Neural ODE,
+  author  = {Ricky T. Q. Chen, Yulia Rubanova, Jesse Bettencourt, David Duvenaud},
+  journal = {https://dblp.uni-trier.de/},
+  title   = {Neural Ordinary Differential Equations},
+  year    = {2018},
+  groups  = {m1p},
 }
 
-@inproceedings{kour2014fast,
-  title={Fast classification of handwritten on-line Arabic characters},
-  author={Kour, George and Saabne, Raid},
-  booktitle={Soft Computing and Pattern Recognition (SoCPaR), 2014 6th International Conference of},
-  pages={312--318},
-  year={2014},
-  organization={IEEE},
-  doi={10.1109/SOCPAR.2014.7008025}
+@Article{dataset_mlru,
+  title  = {http://www.machinelearning.ru/wiki/index.php?title=Временной_ряд_%28библиотека_примеров%29#:~:text=Records-,Accelerometry,-%5B1%5D},
+  groups = {m1p},
 }
 
-@article{hadash2018estimate,
-  title={Estimate and Replace: A Novel Approach to Integrating Deep Neural Networks with Existing Applications},
-  author={Hadash, Guy and Kermany, Einat and Carmeli, Boaz and Lavi, Ofer and Kour, George and Jacovi, Alon},
-  journal={arXiv preprint arXiv:1804.09028},
-  year={2018}
+@Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: grouping:
+0 AllEntriesGroup:;
+1 StaticGroup:m1p\;0\;1\;0x8a8a8aff\;ABUGIDA_THAI\;papers for first paper\;;
 }
