--- a/paper/main.tex
+++ b/paper/main.tex
@@ -8,7 +8,7 @@
 	{поиск и восстановление зависимостей во временных рядах}
 \author
 	[I. M. Latypov]
-	{I. M. Latypov}
+	{I. M. Latypov, E. Vladimirov, V. V. Strizhov}
 \email
 	{latypov.im@phystech.edu}
 \organization	
@@ -27,22 +27,36 @@
 \textbf{Ключевые слова}: \emph{Neural CDE, CCM, временные ряды}
 
 \section{Введение}
-	Работа посвящена задаче поиска причинно-следственных связей между временными рядами и методам предсказания их эволюции.
+	Работа посвящена задаче поиска причинно-следственных связей между временными рядами.
 	Эта задача актуальна, поскольку часто на практике приходится работать с многомерными временными рядами \citep{dataset_mlru}, и учет зависимостей между координатами может улучшить качество предсказаний. 
 		
-	Существует множество методов для обнаружения связей между рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
-	(convergent cross mapping, CCM) и другие, но у них есть существенные недостатки: тест Гренжера не дает
-	представления о виде зависимости рядов, а CCM требуется применять сразу ко всему доступному набору данных. К тому же алгоритм
-	выполняется за $O(n^2)$($n$ - длина ряда) для многомерного случая. Предложенный нами метод "крутое название метода" призван устранить эти недостатки.
+	Существует множество методов для обнаружения связей между временными рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
+	(convergent cross mapping, CCM) и другие, но у них есть существенные недостатки. Предложенный нами метод "крутое название метода" призван устранить их.
 	
-	Для предсказания временных рядов часто используют Recurrental Neural Networks (RNN), но такие модели дискретизируют время
-	что может повлиять на результат предсказания. Мы же предлагаем использовать Neural СDE, которые учитывают непрерывность
-	по времени. К тому же мы получаем механизм для обучения на рядах, информация от которых приходит с разными промежутками времени.
+\section{Математическая постановка}
+	Обозначим $T = \{t_1, ... t_k\}$ - моменты наблюдений.
 	
+	P.S. нужно будет перейти к вероятностной формулировке
 	
-	Работа посвящена обнаружению причинно-следственных связей между разнородными временными рядами
+	$\mathbf{X} = [x_1, ... , x_k]^T$ - многомерный временной ряд, $x_i \in mathcal{R}^n$ - наблюдения $X$ в момент времени $t_i$.
 
-
+		Цель заключается в том, чтобы найти функцию(критерий) $F: \mathcal{R}^{n \times k } \rightarrow \mathcal R$, по значениям которой можно делать вывод о зависимостях между координатами временного ряда $X$.
+	
+\section{Связанные работы (related works)}
+	Метод сходящегося перекрестного отображения(CCM)\citep{CCM}:
+	
+		компоненты временного ряда отображаются в траектороное подпространство и проверяется непрерывность отображения одной траектории на другую. Критерием зависимости служит "степень непрерывности"(пока так, потом исправлю). У метода есть такие проблемы, как использование всего датасета, квадратичное от длины ряза время работы. Так же ислледование \citep{CCM_PA} выделяет другие недостатки.
+	
+	Кросс корелляция:
+	
+		Проверяется корреляция компонент сдвинутых по времени компонент временного ряда. Критерием служит максимальная полученная корреляция. Недостатки метода - использование всего датасета, квадратичное от длины ряза время работы. Так же хорошо известно, что корреляция не является достаточным условием для зависимости случайных величин.
+	
+	Тест Гренжера:
+	
+		Пусть $U, V$ - временные ряды. $U$ предсказывают с использованием $V$ и без использования. При существенном улучшении предсказаний делается вывод о зависимости рядов. Проблема метода заключается в том, что он не дает представлений о виде зависимости рядов. К тому же предсказания могли не улучшиться из-за неверной модели.
+	
+\section{эксперименты}
+	
 \section{Теоритическое обоснование}
 	
 \section{Заключение}
