сделал код и дополнил статью
нужно доработать статью

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -2,6 +2,7 @@
 \newcommand{\hdir}{.}
 \usepackage{./jmlda}
 \usepackage[round]{natbib}
+\usepackage{rotating}
 \begin{document}
 \title
 	[поиск и восстановление зависимостей во временных рядах]
@@ -17,8 +18,7 @@
 	{
 		При прогнозировании временных рядов, зависящих от других временных рядов, требуется решить задачу выявления связей между ними.
 		Предполагается, что добавление связанных временных рядов в прогностическую модель повысит качество прогноза. В данной работе для
-		обнаружения зависимостей между временными рядами предлагается использовать метод .... Для предсказания зависимости между временными 
-		рядами предлагается использовать метод Neural CDE
+		обнаружения зависимостей между временными рядами предлагается совместить Convergent Cross Mapping с ODE-RNN. 
 		}
 \bigskip
 \noindent
@@ -30,32 +30,41 @@
 	Работа посвящена задаче поиска причинно-следственных связей между временными рядами.
 	Эта задача актуальна, поскольку часто на практике приходится работать с многомерными временными рядами \citep{dataset_mlru}, и учет зависимостей между координатами может улучшить качество предсказаний. 
 		
-	Существует множество методов для обнаружения связей между временными рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
-	(convergent cross mapping, CCM) и другие, но у них есть существенные недостатки. Предложенный нами метод "крутое название метода" призван устранить их.
+		Существует множество методов для обнаружения связей между временными рядами. Среди них Тест Гренжера и метод сходящегося перекрестного отображения
+	(convergent cross mapping, CCM) и другие. Идея работы CCM основана не теореме Таккенса (ссылка). Метод отображает временные ряды в траекторные многообразия и рассматривает зависимость траекторий эволюций этих рядов. Наша идея заключается в улучшении процесса построения отображения в траекторное многообразие. Для этого обучается модель ODE-RNN на эмбеддингах CCM алгоритма и скрытые состояния RNN слоев используются как новые эмбеддинги, и на них уже применяется метод CCM. 
+		
+		Преимуществом нашего метода перед CCM к тому же является возможность работать с рядами с нерегулярными наблюдениями.
 	
-\section{Математическая постановка}
-	Обозначим $T = \{t_1, ... t_k\}$ - моменты наблюдений.
-	
-	P.S. нужно будет перейти к вероятностной формулировке
-	
-	$\mathbf{X} = [x_1, ... , x_k]^T$ - многомерный временной ряд, $x_i \in mathcal{R}^n$ - наблюдения $X$ в момент времени $t_i$.
-
-		Цель заключается в том, чтобы найти функцию(критерий) $F: \mathcal{R}^{n \times k } \rightarrow \mathcal R$, по значениям которой можно делать вывод о зависимостях между координатами временного ряда $X$.
 	
 \section{Связанные работы (related works)}
-	Метод сходящегося перекрестного отображения(CCM)\citep{CCM}:
+		
+
+\newpage
+\begin{sidewaystable}
+	\caption{сравнение методов}
+		\begin{tabular}{|l|l|l|l|}
+			\hline
+			Метод            & краткое описание                                                                                                                                                                                                                                                                                      & достоинства                                                                                                 & недостатки                                                                                                                                                                                                                          \\ \hline
+			Тест \\ Гренжера    & \begin{tabular}[c]{@{}l@{}}Пусть $U, V$ - временные ряды. \\  $U$ предсказывают с  использованием \\$V$ и без использования.При существенном \\  улучшении предсказаний делается вывод \\ \\ о зависимости рядов.\end{tabular}                                                                & Легко применять                                                                                             & \begin{tabular}[c]{@{}l@{}}не дает представлений о виде \\ зависимости рядов. \\ К тому же предсказания могут не \\ улучшиться из-за неверной модели.\end{tabular}                                                            \\ \hline
+			Кросс \\ Корреляция & \begin{tabular}[c]{@{}l@{}}Проверяется корреляция  сдвинутых \\ по времени компонент временного ряда. \\ Критерием служит максимальная \\ полученная корреляция.\end{tabular}                                                                                                                & Легко применять                                                                                             & \begin{tabular}[c]{@{}l@{}}Приходится использовать весь датасет\\ + квадратичное от длины ряда \\ \\ время работы. Так же хорошо известно, \\ \\ что корреляция не является достаточным \\ \\ условием зависимости\end{tabular} \\ \hline
+			CCM              & \begin{tabular}[c]{@{}l@{}}компоненты временного ряда отображаются \\ \\ в траектороное  подпространство и\\  проверяется возможность отображения \\ одной траектории на другую.\\ \\  Критерием зависимости служит\\ \\  "степень непрерывности"\\ \\ (пока так, потом исправлю).\end{tabular} & \begin{tabular}[c]{@{}l@{}}Легко применять.\\  Работает лучше \\ методов предложенных \\ выше.\end{tabular} & \begin{tabular}[c]{@{}l@{}}использование всего датасета, \\ квадратичное от длины ряда время работы.\\  Так же ислледование \textbackslash{}citep\{CCM\_PA\} \\ \\ выделяет другие недостатки.\end{tabular}                   \\ \hline
+			CMM +\\ ODE-RNN    & обучаем сетку, применяем CCM                                                                                                                                                                                                                                                                          & \begin{tabular}[c]{@{}l@{}}Точнее может выявлять \\ зависимости между \\ временными рядами\end{tabular}     & \begin{tabular}[c]{@{}l@{}}Нужно обучать на достаточно \\ \\ большом куске данных\end{tabular}                                                                                                                                      \\ \hline
+		\end{tabular}
+\end{sidewaystable}
 	
-		компоненты временного ряда отображаются в траектороное подпространство и проверяется непрерывность отображения одной траектории на другую. Критерием зависимости служит "степень непрерывности"(пока так, потом исправлю). У метода есть такие проблемы, как использование всего датасета, квадратичное от длины ряза время работы. Так же ислледование \citep{CCM_PA} выделяет другие недостатки.
+\newpage
+
 	
-	Кросс корелляция:
-	
-		Проверяется корреляция компонент сдвинутых по времени компонент временного ряда. Критерием служит максимальная полученная корреляция. Недостатки метода - использование всего датасета, квадратичное от длины ряза время работы. Так же хорошо известно, что корреляция не является достаточным условием для зависимости случайных величин.
-	
-	Тест Гренжера:
-	
-		Пусть $U, V$ - временные ряды. $U$ предсказывают с использованием $V$ и без использования. При существенном улучшении предсказаний делается вывод о зависимости рядов. Проблема метода заключается в том, что он не дает представлений о виде зависимости рядов. К тому же предсказания могли не улучшиться из-за неверной модели.
-	
+\section{Математическая постановка}
+Обозначим $T = \{t_1, ... t_k\}$ - моменты наблюдений.
+
+P.S. нужно будет перейти к вероятностной формулировке
+
+$\mathbf{X} = [x_1, ... , x_k]^T$ - многомерный временной ряд, $x_i \in mathcal{R}^n$ - наблюдения $X$ в момент времени $t_i$.
+
+Цель заключается в том, чтобы найти функцию(критерий) $F: \mathcal{R}^{n \times k } \rightarrow \mathcal R$, по значениям которой можно делать вывод о зависимостях между координатами временного ряда $X$.
 \section{эксперименты}
+	Провели эксперименты, можно посмотреть на гите
 	
 \section{Теоритическое обоснование}
 	
